[tool.poetry]
name = "diagrams-python"
version = "0.1.0"
description = "Learn diagramming using Python"
authors = ["gilgamesh7 <felidaesrule@yahoo.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "diagrams_python"}]

[tool.poetry.dependencies]
python = "^3.10"
diagrams = "^0.23.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
